--- a/.github/workflows/trigger-build.yml
+++ b/.github/workflows/trigger-build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Trigger workflow in another repository
         run: |
           curl -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.MY_PAT }}" \
           -H "Accept: application/vnd.github.v3+json" \
           https://api.github.com/repos/rstats-on-nix/build_tree/dispatches \
           -d '{
